# RNN-2

./: char_lstm_generation.py  pyproject.toml
notebooks/: unit1_pytorch_basics.ipynb  unit2_neural_networks.ipynb  unit3_rnn_theory.ipynb  unit4_pytorch_rnn_modules.ipynb  unit5_text_preprocessing.ipynb  unit6_advanced_rnn.ipynb  unit7_text_generation.ipynb
notebooks/model/: model_demo.pth
notes/: 梯度衰减.md
