[project]
name = "pytorch-rnn-tutorial"
version = "0.1.0"
description = "PyTorch and RNN Learning Tutorial with Text Generation Project"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "tqdm>=4.65",
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "scikit-learn>=1.3",
]
